k8sresources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webcrawler-service
spec:
  selector:
    app: webcrawler
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
